[project]
name = "comfyui-ollama_killer"
description = "OllamaKiller is a cross-platform utility node for ComfyUI that automatically manages Ollama processes (`ollama.exe` on Windows, `ollama` on macOS/Linux). It helps free up VRAM by terminating Ollama processes after model execution, improving workflow performance and memory management. Features include graceful process termination, detailed status reporting, and seamless text passthrough."
version = "1.1.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/theshubzworld/ComfyUI-ollama_killer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shubzworld"
DisplayName = "ComfyUI-ollama_killer"
Icon = "https://avatars.githubusercontent.com/u/176368083"
